news validation fixes

--- a/src/blocks/modules/galleryThumbs/galleryThumbs.html
+++ b/src/blocks/modules/galleryThumbs/galleryThumbs.html
@@ -6,7 +6,7 @@
                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                     <source srcset="img/AA5J6740.webp" type="image/webp">
                      <!--[if IE 9]></video><![endif]-->
-                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                    <img src="img/AA5J6740.jpg" title="" alt="">
                 </picture>
             </div>
             <div class="swiper-slide">
@@ -14,7 +14,7 @@
                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                     <source srcset="img/AA5J6740.webp" type="image/webp">
                      <!--[if IE 9]></video><![endif]-->
-                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                    <img src="img/AA5J6740.jpg" title="" alt="">
                 </picture>
             </div>
             <div class="swiper-slide">
@@ -22,7 +22,7 @@
                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                     <source srcset="img/AA5J6740.webp" type="image/webp">
                      <!--[if IE 9]></video><![endif]-->
-                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                    <img src="img/AA5J6740.jpg" title="" alt="">
                 </picture>
             </div>
             <div class="swiper-slide">
@@ -30,7 +30,7 @@
                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                     <source srcset="img/AA5J6740.webp" type="image/webp">
                      <!--[if IE 9]></video><![endif]-->
-                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                    <img src="img/AA5J6740.jpg" title="" alt="">
                 </picture>
             </div>
             <div class="swiper-slide">
@@ -38,7 +38,7 @@
                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                     <source srcset="img/AA5J6740.webp" type="image/webp">
                      <!--[if IE 9]></video><![endif]-->
-                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                    <img src="img/AA5J6740.jpg" title="" alt="">
                 </picture>
             </div>
             <div class="swiper-slide">
@@ -46,7 +46,7 @@
                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                     <source srcset="img/AA5J6740.webp" type="image/webp">
                      <!--[if IE 9]></video><![endif]-->
-                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                    <img src="img/AA5J6740.jpg" title="" alt="">
                 </picture>
             </div>
             <div class="swiper-slide">
@@ -54,7 +54,7 @@
                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                     <source srcset="img/AA5J6740.webp" type="image/webp">
                      <!--[if IE 9]></video><![endif]-->
-                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                    <img src="img/AA5J6740.jpg" title="" alt="">
                 </picture>
             </div>
             <div class="swiper-slide">
@@ -62,7 +62,7 @@
                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                     <source srcset="img/AA5J6740.webp" type="image/webp">
                      <!--[if IE 9]></video><![endif]-->
-                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                    <img src="img/AA5J6740.jpg" title="" alt="">
                 </picture>
             </div>
             <div class="swiper-slide">
@@ -70,7 +70,7 @@
                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                     <source srcset="img/AA5J6740.webp" type="image/webp">
                      <!--[if IE 9]></video><![endif]-->
-                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                    <img src="img/AA5J6740.jpg" title="" alt="">
                 </picture>
             </div>
             <div class="swiper-slide">
@@ -78,7 +78,7 @@
                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                     <source srcset="img/AA5J6740.webp" type="image/webp">
                      <!--[if IE 9]></video><![endif]-->
-                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                    <img src="img/AA5J6740.jpg" title="" alt="">
                 </picture>
             </div>
         </div>
@@ -89,7 +89,7 @@
                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                         <source srcset="img/AA5J6740.webp" type="image/webp">
                          <!--[if IE 9]></video><![endif]-->
-                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                        <img src="img/AA5J6740.jpg" title="" alt="">
                     </picture>
                 </div>
                 <div class="swiper-slide">
@@ -97,7 +97,7 @@
                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                         <source srcset="img/AA5J6740.webp" type="image/webp">
                          <!--[if IE 9]></video><![endif]-->
-                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                        <img src="img/AA5J6740.jpg" title="" alt="">
                     </picture>
                 </div>
                 <div class="swiper-slide">
@@ -105,7 +105,7 @@
                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                         <source srcset="img/AA5J6740.webp" type="image/webp">
                          <!--[if IE 9]></video><![endif]-->
-                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                        <img src="img/AA5J6740.jpg" title="" alt="">
                     </picture>
                 </div>
                 <div class="swiper-slide">
@@ -113,7 +113,7 @@
                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                         <source srcset="img/AA5J6740.webp" type="image/webp">
                          <!--[if IE 9]></video><![endif]-->
-                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                        <img src="img/AA5J6740.jpg" title="" alt="">
                     </picture>
                 </div>
                 <div class="swiper-slide">
@@ -121,7 +121,7 @@
                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                         <source srcset="img/AA5J6740.webp" type="image/webp">
                          <!--[if IE 9]></video><![endif]-->
-                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                        <img src="img/AA5J6740.jpg" title="" alt="">
                     </picture>
                 </div>
                 <div class="swiper-slide">
@@ -129,7 +129,7 @@
                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                         <source srcset="img/AA5J6740.webp" type="image/webp">
                          <!--[if IE 9]></video><![endif]-->
-                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                        <img src="img/AA5J6740.jpg" title="" alt="">
                     </picture>
                 </div>
                 <div class="swiper-slide">
@@ -137,7 +137,7 @@
                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                         <source srcset="img/AA5J6740.webp" type="image/webp">
                          <!--[if IE 9]></video><![endif]-->
-                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                        <img src="img/AA5J6740.jpg" title="" alt="">
                     </picture>
                 </div>
                 <div class="swiper-slide">
@@ -145,7 +145,7 @@
                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                         <source srcset="img/AA5J6740.webp" type="image/webp">
                          <!--[if IE 9]></video><![endif]-->
-                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                        <img src="img/AA5J6740.jpg" title="" alt="">
                     </picture>
                 </div>
                 <div class="swiper-slide">
@@ -153,7 +153,7 @@
                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                         <source srcset="img/AA5J6740.webp" type="image/webp">
                          <!--[if IE 9]></video><![endif]-->
-                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                        <img src="img/AA5J6740.jpg" title="" alt="">
                     </picture>
                 </div>
                 <div class="swiper-slide">
@@ -161,7 +161,7 @@
                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                         <source srcset="img/AA5J6740.webp" type="image/webp">
                          <!--[if IE 9]></video><![endif]-->
-                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                        <img src="img/AA5J6740.jpg" title="" alt="">
                     </picture>
                 </div>
             </div>
@@ -185,7 +185,7 @@
                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                     <source srcset="img/AA5J6740.webp" type="image/webp">
                     <!--[if IE 9]></video><![endif]-->
-                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                    <img src="img/AA5J6740.jpg" title="" alt="">
                 </picture>
             </div>
             <div class="swiper-slide">
@@ -193,7 +193,7 @@
                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                     <source srcset="img/AA5J6740.webp" type="image/webp">
                     <!--[if IE 9]></video><![endif]-->
-                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                    <img src="img/AA5J6740.jpg" title="" alt="">
                 </picture>
             </div>
             <div class="swiper-slide">
@@ -201,7 +201,7 @@
                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                     <source srcset="img/AA5J6740.webp" type="image/webp">
                     <!--[if IE 9]></video><![endif]-->
-                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                    <img src="img/AA5J6740.jpg" title="" alt="">
                 </picture>
             </div>
             <div class="swiper-slide">
@@ -209,7 +209,7 @@
                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                     <source srcset="img/AA5J6740.webp" type="image/webp">
                     <!--[if IE 9]></video><![endif]-->
-                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                    <img src="img/AA5J6740.jpg" title="" alt="">
                 </picture>
             </div>
             <div class="swiper-slide">
@@ -217,7 +217,7 @@
                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                     <source srcset="img/AA5J6740.webp" type="image/webp">
                     <!--[if IE 9]></video><![endif]-->
-                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                    <img src="img/AA5J6740.jpg" title="" alt="">
                 </picture>
             </div>
             <div class="swiper-slide">
@@ -225,7 +225,7 @@
                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                     <source srcset="img/AA5J6740.webp" type="image/webp">
                     <!--[if IE 9]></video><![endif]-->
-                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                    <img src="img/AA5J6740.jpg" title="" alt="">
                 </picture>
             </div>
             <div class="swiper-slide">
@@ -233,7 +233,7 @@
                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                     <source srcset="img/AA5J6740.webp" type="image/webp">
                     <!--[if IE 9]></video><![endif]-->
-                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                    <img src="img/AA5J6740.jpg" title="" alt="">
                 </picture>
             </div>
             <div class="swiper-slide">
@@ -241,7 +241,7 @@
                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                     <source srcset="img/AA5J6740.webp" type="image/webp">
                     <!--[if IE 9]></video><![endif]-->
-                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                    <img src="img/AA5J6740.jpg" title="" alt="">
                 </picture>
             </div>
             <div class="swiper-slide">
@@ -249,7 +249,7 @@
                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                     <source srcset="img/AA5J6740.webp" type="image/webp">
                     <!--[if IE 9]></video><![endif]-->
-                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                    <img src="img/AA5J6740.jpg" title="" alt="">
                 </picture>
             </div>
             <div class="swiper-slide">
@@ -257,7 +257,7 @@
                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                     <source srcset="img/AA5J6740.webp" type="image/webp">
                     <!--[if IE 9]></video><![endif]-->
-                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                    <img src="img/AA5J6740.jpg" title="" alt="">
                 </picture>
             </div>
         </div>
@@ -268,7 +268,7 @@
                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                         <source srcset="img/AA5J6740.webp" type="image/webp">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                        <img src="img/AA5J6740.jpg" title="" alt="">
                     </picture>
                 </div>
                 <div class="swiper-slide">
@@ -276,7 +276,7 @@
                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                         <source srcset="img/AA5J6740.webp" type="image/webp">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                        <img src="img/AA5J6740.jpg" title="" alt="">
                     </picture>
                 </div>
                 <div class="swiper-slide">
@@ -284,7 +284,7 @@
                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                         <source srcset="img/AA5J6740.webp" type="image/webp">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                        <img src="img/AA5J6740.jpg" title="" alt="">
                     </picture>
                 </div>
                 <div class="swiper-slide">
@@ -292,7 +292,7 @@
                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                         <source srcset="img/AA5J6740.webp" type="image/webp">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                        <img src="img/AA5J6740.jpg" title="" alt="">
                     </picture>
                 </div>
                 <div class="swiper-slide">
@@ -300,7 +300,7 @@
                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                         <source srcset="img/AA5J6740.webp" type="image/webp">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                        <img src="img/AA5J6740.jpg" title="" alt="">
                     </picture>
                 </div>
                 <div class="swiper-slide">
@@ -308,7 +308,7 @@
                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                         <source srcset="img/AA5J6740.webp" type="image/webp">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                        <img src="img/AA5J6740.jpg" title="" alt="">
                     </picture>
                 </div>
                 <div class="swiper-slide">
@@ -316,7 +316,7 @@
                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                         <source srcset="img/AA5J6740.webp" type="image/webp">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                        <img src="img/AA5J6740.jpg" title="" alt="">
                     </picture>
                 </div>
                 <div class="swiper-slide">
@@ -324,7 +324,7 @@
                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                         <source srcset="img/AA5J6740.webp" type="image/webp">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                        <img src="img/AA5J6740.jpg" title="" alt="">
                     </picture>
                 </div>
                 <div class="swiper-slide">
@@ -332,7 +332,7 @@
                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                         <source srcset="img/AA5J6740.webp" type="image/webp">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                        <img src="img/AA5J6740.jpg" title="" alt="">
                     </picture>
                 </div>
                 <div class="swiper-slide">
@@ -340,7 +340,7 @@
                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                         <source srcset="img/AA5J6740.webp" type="image/webp">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                        <img src="img/AA5J6740.jpg" title="" alt="">
                     </picture>
                 </div>
             </div>
