add spoiler add logo add form(start) small fix validation

--- a/src/blocks/modules/comments/comments.html
+++ b/src/blocks/modules/comments/comments.html
@@ -28,7 +28,7 @@
                         <video style="display: none;"><![endif]-->
                         <source srcset="img/anonim.webp" type="image/webp">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="img/anonim.jpg" type="image/jpg" title="Аноним">
+                        <img src="img/anonim.png"   title="Аноним">
                     </picture>
                 </a>
                 <div class="comments__item-body">
@@ -45,7 +45,7 @@
                                 <input type="hidden" value="12">
                                 <div class="like-item__count-output"></div>
                             </div>
-                            <button class="like-item__btn dislike__btn"><i class="icon icon--like-gray"></i></button>
+                            <button class="like-item__btn dislike__btn"><i class="icon icon--dislike-gray"></i></button>
                         </div>
                     </div>
                 </div>
@@ -77,7 +77,7 @@
                                 <video style="display: none;"><![endif]-->
                                 <source srcset="img/avatar.webp" type="image/webp">
                                 <!--[if IE 9]></video><![endif]-->
-                                <img src="img/avatar.jpg" type="image/jpg" title="Аноним">
+                                <img src="img/avatar.jpg"   title="Аноним">
                             </picture>
                         </a>
                         <div class="comments__item-body">
@@ -94,7 +94,7 @@
                                         <input type="hidden" value="12">
                                         <div class="like-item__count-output">13</div>
                                     </div>
-                                    <button class="like-item__btn dislike__btn"><i class="icon icon--like-gray"></i></button>
+                                    <button class="like-item__btn dislike__btn"><i class="icon icon--dislike-gray"></i></button>
                                 </div>
                             </div>
                         </div>
@@ -124,7 +124,7 @@
                                 <video style="display: none;"><![endif]-->
                                 <source srcset="img/avatar.webp" type="image/webp">
                                 <!--[if IE 9]></video><![endif]-->
-                                <img src="img/avatar.jpg" type="image/jpg" title="Аноним">
+                                <img src="img/avatar.jpg"   title="Аноним">
                             </picture>
                         </a>
                         <div class="comments__item-body">
@@ -141,7 +141,7 @@
                                         <input type="hidden" value="12">
                                         <div class="like-item__count-output">13</div>
                                     </div>
-                                    <button class="like-item__btn dislike__btn"><i class="icon icon--like-gray"></i></button>
+                                    <button class="like-item__btn dislike__btn"><i class="icon icon--dislike-gray"></i></button>
                                 </div>
                             </div>
                         </div>
@@ -171,7 +171,7 @@
                                 <video style="display: none;"><![endif]-->
                                 <source srcset="img/avatar.webp" type="image/webp">
                                 <!--[if IE 9]></video><![endif]-->
-                                <img src="img/avatar.jpg" type="image/jpg" title="Аноним">
+                                <img src="img/avatar.jpg"   title="Аноним">
                             </picture>
                         </a>
                         <div class="comments__item-body">
@@ -188,7 +188,7 @@
                                         <input type="hidden" value="12">
                                         <div class="like-item__count-output">13</div>
                                     </div>
-                                    <button class="like-item__btn dislike__btn"><i class="icon icon--like-gray"></i></button>
+                                    <button class="like-item__btn dislike__btn"><i class="icon icon--dislike-gray"></i></button>
                                 </div>
                             </div>
                         </div>
@@ -218,7 +218,7 @@
                                 <video style="display: none;"><![endif]-->
                                 <source srcset="img/avatar.webp" type="image/webp">
                                 <!--[if IE 9]></video><![endif]-->
-                                <img src="img/avatar.jpg" type="image/jpg" title="Аноним">
+                                <img src="img/avatar.jpg"   title="Аноним">
                             </picture>
                         </a>
                         <div class="comments__item-body">
@@ -235,7 +235,7 @@
                                         <input type="hidden" value="12">
                                         <div class="like-item__count-output">13</div>
                                     </div>
-                                    <button class="like-item__btn dislike__btn"><i class="icon icon--like-gray"></i></button>
+                                    <button class="like-item__btn dislike__btn"><i class="icon icon--dislike-gray"></i></button>
                                 </div>
                             </div>
                         </div>
@@ -265,7 +265,7 @@
                                 <video style="display: none;"><![endif]-->
                                 <source srcset="img/avatar.webp" type="image/webp">
                                 <!--[if IE 9]></video><![endif]-->
-                                <img src="img/avatar.jpg" type="image/jpg" title="Аноним">
+                                <img src="img/avatar.jpg"   title="Аноним">
                             </picture>
                         </a>
                         <div class="comments__item-body">
@@ -282,7 +282,7 @@
                                         <input type="hidden" value="12">
                                         <div class="like-item__count-output">13</div>
                                     </div>
-                                    <button class="like-item__btn dislike__btn"><i class="icon icon--like-gray"></i></button>
+                                    <button class="like-item__btn dislike__btn"><i class="icon icon--dislike-gray"></i></button>
                                 </div>
                             </div>
                         </div>
@@ -314,7 +314,7 @@
                         <video style="display: none;"><![endif]-->
                         <source srcset="img/avatar.webp" type="image/webp">
                         <!--[if IE 9]></video><![endif]-->
-                        <img src="img/avatar.jpg" type="image/jpg" title="Аноним">
+                        <img src="img/avatar.jpg"   title="Аноним">
                     </picture>
                 </a>
                 <div class="comments__item-body">
@@ -331,7 +331,7 @@
                                 <input type="hidden" value="2">
                                 <div class="like-item__count-output"></div>
                             </div>
-                            <button class="like-item__btn dislike__btn"><i class="icon icon--like-gray"></i></button>
+                            <button class="like-item__btn dislike__btn"><i class="icon icon--dislike-gray"></i></button>
                         </div>
                     </div>
                 </div>
