--- a/src/blocks/modules/gallery/gallery.html
+++ b/src/blocks/modules/gallery/gallery.html
@@ -4,7 +4,7 @@
             <!--[if IE 9]><video style="display: none;"><![endif]-->
             <source srcset="img/PPU.webp" type="image/webp">
             <!--[if IE 9]></video><![endif]-->
-            <img src="img/PPU.jpg" class="gallery__item-img" type="image/jpg" title="" alt="">
+            <img src="img/PPU.jpg" class="gallery__item-img"   title="" alt="">
         </picture>
     </div>
     <div class="gallery__item">
@@ -12,7 +12,7 @@
             <!--[if IE 9]><video style="display: none;"><![endif]-->
             <source srcset="img/AA5J7280.webp" type="image/webp">
             <!--[if IE 9]></video><![endif]-->
-            <img src="img/AA5J7280.jpg" class="gallery__item-img" type="image/jpg" title="" alt="">
+            <img src="img/AA5J7280.jpg" class="gallery__item-img"   title="" alt="">
         </picture>
     </div>
 </div>
@@ -23,7 +23,7 @@
             <!--[if IE 9]><video style="display: none;"><![endif]-->
             <source srcset="img/PPU.webp" type="image/webp">
             <!--[if IE 9]></video><![endif]-->
-            <img src="img/PPU.jpg" class="gallery__item-img" type="image/jpg" title="" alt="">
+            <img src="img/PPU.jpg" class="gallery__item-img"   title="" alt="">
         </picture>
     </div>
     <div class="gallery__item">
@@ -31,7 +31,7 @@
             <!--[if IE 9]><video style="display: none;"><![endif]-->
             <source srcset="img/AA5J7280.webp" type="image/webp">
             <!--[if IE 9]></video><![endif]-->
-            <img src="img/AA5J7280.jpg" class="gallery__item-img" type="image/jpg" title="" alt="">
+            <img src="img/AA5J7280.jpg" class="gallery__item-img"   title="" alt="">
         </picture>
     </div>
 </div>
