--- a/src/blocks/modules/card/card.html
+++ b/src/blocks/modules/card/card.html
@@ -5,7 +5,7 @@
             <source srcset="" type="image/webp">
             <!--[if IE 9]></video><![endif]-->
 
-            <img src="..." type="image/jpg" title="" alt="...">
+            <img src="..."   title="" alt="...">
         </picture>
         <div class="card-body">
             <div class="card-tags"><span class="badge">ВМЗ</span></div>
@@ -26,7 +26,7 @@
             <!--[if IE 9]><video style="display: none;"><![endif]-->
             <source srcset="" type="image/webp">
             <!--[if IE 9]></video><![endif]-->
-            <img src="..." type="image/jpg" title="" alt="...">
+            <img src="..."   title="" alt="...">
         </picture>
         <div class="card-body">
             <div class="card-tags"><span class="badge">ВМЗ</span></div>
@@ -46,7 +46,7 @@
             <!--[if IE 9]><video style="display: none;"><![endif]-->
             <source srcset="" type="image/webp">
             <!--[if IE 9]></video><![endif]-->
-            <img src="..." type="image/jpg" title="" alt="...">
+            <img src="..."   title="" alt="...">
         </picture>
         <div class="card-body">
             <div class="card-tags"><span class="badge">ВМЗ</span></div>
