--- a/src/blocks/modules/galleryPopup/galleryPopup.html
+++ b/src/blocks/modules/galleryPopup/galleryPopup.html
@@ -16,7 +16,7 @@
                                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                                     <source srcset="img/AA5J6740-vertical.webp" type="image/webp">
                                     <!--[if IE 9]></video><![endif]-->
-                                    <img src="img/AA5J6740-vertical.jpg" type="image/jpg" title="" alt="">
+                                    <img src="img/AA5J6740-vertical.jpg"   title="" alt="">
                                 </picture>
                                 <div class="thumbs-slider__description ">
                                     <h3 class="title">Новые технологии на ВМЗ в 2019</h3>
@@ -28,7 +28,7 @@
                                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                                     <source srcset="img/AA5J6740.webp" type="image/webp">
                                     <!--[if IE 9]></video><![endif]-->
-                                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                                    <img src="img/AA5J6740.jpg"   title="" alt="">
                                 </picture>
                                 <div class="thumbs-slider__description ">
                                     <h3 class="title">Новые технологии на ВМЗ в 2019</h3>
@@ -40,7 +40,7 @@
                                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                                     <source srcset="img/AA5J6740.webp" type="image/webp">
                                     <!--[if IE 9]></video><![endif]-->
-                                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                                    <img src="img/AA5J6740.jpg"   title="" alt="">
                                 </picture>
                                 <div class="thumbs-slider__description ">
                                     <h3 class="title">Новые технологии на ВМЗ в 2019</h3>
@@ -52,7 +52,7 @@
                                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                                     <source srcset="img/AA5J6740.webp" type="image/webp">
                                     <!--[if IE 9]></video><![endif]-->
-                                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                                    <img src="img/AA5J6740.jpg"   title="" alt="">
                                 </picture>
                                 <div class="thumbs-slider__description ">
                                     <h3 class="title">Новые технологии на ВМЗ в 2019</h3>
@@ -64,7 +64,7 @@
                                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                                     <source srcset="img/AA5J6740.webp" type="image/webp">
                                     <!--[if IE 9]></video><![endif]-->
-                                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                                    <img src="img/AA5J6740.jpg"   title="" alt="">
                                 </picture>
                                 <div class="thumbs-slider__description ">
                                     <h3 class="title">Новые технологии на ВМЗ в 2019</h3>
@@ -76,7 +76,7 @@
                                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                                     <source srcset="img/AA5J6740.webp" type="image/webp">
                                     <!--[if IE 9]></video><![endif]-->
-                                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                                    <img src="img/AA5J6740.jpg"   title="" alt="">
                                 </picture>
                                 <div class="thumbs-slider__description ">
                                     <h3 class="title">Новые технологии на ВМЗ в 2019</h3>
@@ -88,7 +88,7 @@
                                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                                     <source srcset="img/AA5J6740.webp" type="image/webp">
                                     <!--[if IE 9]></video><![endif]-->
-                                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                                    <img src="img/AA5J6740.jpg"   title="" alt="">
                                 </picture>
                                 <div class="thumbs-slider__description ">
                                     <h3 class="title">Новые технологии на ВМЗ в 2019</h3>
@@ -100,7 +100,7 @@
                                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                                     <source srcset="img/AA5J6740.webp" type="image/webp">
                                     <!--[if IE 9]></video><![endif]-->
-                                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                                    <img src="img/AA5J6740.jpg"   title="" alt="">
                                 </picture>
                                 <div class="thumbs-slider__description ">
                                     <h3 class="title">Новые технологии на ВМЗ в 2019</h3>
@@ -112,7 +112,7 @@
                                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                                     <source srcset="img/AA5J6740.webp" type="image/webp">
                                     <!--[if IE 9]></video><![endif]-->
-                                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                                    <img src="img/AA5J6740.jpg"   title="" alt="">
                                 </picture>
                                 <div class="thumbs-slider__description ">
                                     <h3 class="title">Новые технологии на ВМЗ в 2019</h3>
@@ -124,7 +124,7 @@
                                     <!--[if IE 9]><video style="display: none;"><![endif]-->
                                     <source srcset="img/AA5J6740.webp" type="image/webp">
                                     <!--[if IE 9]></video><![endif]-->
-                                    <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                                    <img src="img/AA5J6740.jpg"   title="" alt="">
                                 </picture>
                                 <div class="thumbs-slider__description ">
                                     <h3 class="title">Новые технологии на ВМЗ в 2019</h3>
@@ -139,7 +139,7 @@
                                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                                         <source srcset="img/AA5J6740.webp" type="image/webp">
                                         <!--[if IE 9]></video><![endif]-->
-                                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                                        <img src="img/AA5J6740.jpg"   title="" alt="">
                                     </picture>
                                 </div>
                                 <div class="swiper-slide">
@@ -147,7 +147,7 @@
                                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                                         <source srcset="img/AA5J6740.webp" type="image/webp">
                                         <!--[if IE 9]></video><![endif]-->
-                                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                                        <img src="img/AA5J6740.jpg"   title="" alt="">
                                     </picture>
                                 </div>
                                 <div class="swiper-slide">
@@ -155,7 +155,7 @@
                                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                                         <source srcset="img/AA5J6740.webp" type="image/webp">
                                         <!--[if IE 9]></video><![endif]-->
-                                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                                        <img src="img/AA5J6740.jpg"   title="" alt="">
                                     </picture>
                                 </div>
                                 <div class="swiper-slide">
@@ -163,7 +163,7 @@
                                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                                         <source srcset="img/AA5J6740.webp" type="image/webp">
                                         <!--[if IE 9]></video><![endif]-->
-                                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                                        <img src="img/AA5J6740.jpg"   title="" alt="">
                                     </picture>
                                 </div>
                                 <div class="swiper-slide">
@@ -171,7 +171,7 @@
                                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                                         <source srcset="img/AA5J6740.webp" type="image/webp">
                                         <!--[if IE 9]></video><![endif]-->
-                                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                                        <img src="img/AA5J6740.jpg"   title="" alt="">
                                     </picture>
                                 </div>
                                 <div class="swiper-slide">
@@ -179,7 +179,7 @@
                                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                                         <source srcset="img/AA5J6740.webp" type="image/webp">
                                         <!--[if IE 9]></video><![endif]-->
-                                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                                        <img src="img/AA5J6740.jpg"   title="" alt="">
                                     </picture>
                                 </div>
                                 <div class="swiper-slide">
@@ -187,7 +187,7 @@
                                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                                         <source srcset="img/AA5J6740.webp" type="image/webp">
                                         <!--[if IE 9]></video><![endif]-->
-                                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                                        <img src="img/AA5J6740.jpg"   title="" alt="">
                                     </picture>
                                 </div>
                                 <div class="swiper-slide">
@@ -195,7 +195,7 @@
                                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                                         <source srcset="img/AA5J6740.webp" type="image/webp">
                                         <!--[if IE 9]></video><![endif]-->
-                                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                                        <img src="img/AA5J6740.jpg"   title="" alt="">
                                     </picture>
                                 </div>
                                 <div class="swiper-slide">
@@ -203,7 +203,7 @@
                                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                                         <source srcset="img/AA5J6740.webp" type="image/webp">
                                         <!--[if IE 9]></video><![endif]-->
-                                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                                        <img src="img/AA5J6740.jpg"   title="" alt="">
                                     </picture>
                                 </div>
                                 <div class="swiper-slide">
@@ -211,7 +211,7 @@
                                         <!--[if IE 9]><video style="display: none;"><![endif]-->
                                         <source srcset="img/AA5J6740.webp" type="image/webp">
                                         <!--[if IE 9]></video><![endif]-->
-                                        <img src="img/AA5J6740.jpg" type="image/jpg" title="" alt="">
+                                        <img src="img/AA5J6740.jpg"   title="" alt="">
                                     </picture>
                                 </div>
                             </div>
