--- a/src/blocks/modules/likeItem/likeItem.html
+++ b/src/blocks/modules/likeItem/likeItem.html
@@ -4,5 +4,5 @@
         <input type="hidden" value="12" >
         <div class="like-item__count-output">13</div>
     </div>
-    <button class="like-item__btn dislike__btn"><i class="icon icon--like-gray"></i></button>
+    <button class="like-item__btn dislike__btn"><i class="icon icon--dislike-gray"></i></button>
 </div>
