add video modal + add gallery sliders and modal slider connections.

--- a/src/blocks/modules/galleryPopup/galleryPopup.html
+++ b/src/blocks/modules/galleryPopup/galleryPopup.html
@@ -8,7 +8,7 @@
             </div>
 
             <div class="modal-content__inner">
-                <div class="thumbs-slider thumbs-slider--border">
+                <div class="thumbs-slider thumbs-slider--border js-modal-thumbs-slider">
                     <div class="swiper-container thumbs-slider__main js-thumbs-slider__main js-thumbs-slider__main--modal">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
@@ -132,7 +132,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-container thumbs-slider__nav js-thumbs-slider__nav">
+                        <div class="swiper-container thumbs-slider__nav js-thumbs-slider__nav--modal">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
                                     <picture class="thumbs-slider__nav-img js-thumbs-slider__nav-img">
