--- a/src/blocks/modules/galleryThumbs/galleryThumbs.html
+++ b/src/blocks/modules/galleryThumbs/galleryThumbs.html
@@ -1,5 +1,5 @@
 <div class="thumbs-slider">
-    <div class="swiper-container thumbs-slider__main">
+    <div class="swiper-container thumbs-slider__main js-thumbs-slider__main">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
                 <picture class="thumbs-slider__main-img">
@@ -178,7 +178,7 @@
 </div>
 
 <div class="thumbs-slider">
-    <div class="swiper-container thumbs-slider__main thumbs-slider__main--border">
+    <div class="swiper-container thumbs-slider__main js-thumbs-slider__main thumbs-slider__main--border">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
                 <picture class="thumbs-slider__main-img">
