--- a/src/blocks/modules/galleryPopup/galleryPopup.html
+++ b/src/blocks/modules/galleryPopup/galleryPopup.html
@@ -132,7 +132,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-container thumbs-slider__nav js-thumbs-slider__nav--modal">
+                        <div class="swiper-container thumbs-slider__nav js-thumbs-slider__nav js-thumbs-slider__nav--modal">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
                                     <picture class="thumbs-slider__nav-img js-thumbs-slider__nav-img">
