--- a/src/blocks/modules/unknown/unknown.html
+++ b/src/blocks/modules/unknown/unknown.html
@@ -127,6 +127,52 @@
                                 </picture>
                             </div>
                         </div>
+                        <div class="swiper-container thumbs-slider__nav js-unknown-modal-slider-nav">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <picture>
+                                        <source srcset="img/unknown-1-1.webp" type="image/webp">
+                                        <img src="img/unknown-1-1.jpg" alt="image_alt">
+                                    </picture>
+                                </div>
+                                <div class="swiper-slide">
+                                    <picture>
+                                        <source srcset="img/unknown-2-1.webp" type="image/webp">
+                                        <img src="img/unknown-2-1.jpg" alt="image_alt">
+                                    </picture>
+                                </div>
+                                <div class="swiper-slide">
+                                    <picture>
+                                        <source srcset="img/unknown-2-1.webp" type="image/webp">
+                                        <img src="img/unknown-2-1.jpg" alt="image_alt">
+                                    </picture>
+                                </div>
+                                <div class="swiper-slide">
+                                    <picture>
+                                        <source srcset="img/unknown-1-1.webp" type="image/webp">
+                                        <img src="img/unknown-1-1.jpg" alt="image_alt">
+                                    </picture>
+                                </div>
+                                <div class="swiper-slide">
+                                    <picture>
+                                        <source srcset="img/unknown-1-1.webp" type="image/webp">
+                                        <img src="img/unknown-1-1.jpg" alt="image_alt">
+                                    </picture>
+                                </div>
+                                <div class="swiper-slide">
+                                    <picture>
+                                        <source srcset="img/unknown-1-1.webp" type="image/webp">
+                                        <img src="img/unknown-1-1.jpg" alt="image_alt">
+                                    </picture>
+                                </div>
+                                <div class="swiper-slide">
+                                    <picture>
+                                        <source srcset="img/unknown-1-1.webp" type="image/webp">
+                                        <img src="img/unknown-1-1.jpg" alt="image_alt">
+                                    </picture>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="swiper-button swiper-button-prev js-unknown-modal-prev"></div>
                     <div class="swiper-button swiper-button-next js-unknown-modal-next"></div>
