styling select start develop data-select

--- a/src/blocks/modules/dataselect/dataselect.html
+++ b/src/blocks/modules/dataselect/dataselect.html
@@ -1,4 +1,10 @@
 <div class="data-select">
     <button class="data-select__btn datapicker-trigger-js" type="button">Дата</button>
-    <input type="text" class="data-select__data-input datapicker-js" data-range="true" data-multiple-dates-separator=" - ">
+    <div class="data-select__result">
+        <input type="text" readonly class="date-select__input datapicker-result-js">
+        <button class="data-select__clear datapicker-clear-js"></button>
+    </div>
+    <div class="data-select__dropdown">
+        <div class="data-select__item datapicker-js"></div>
+    </div>
 </div>
