--- a/src/blocks/modules/dataselect/dataselect.html
+++ b/src/blocks/modules/dataselect/dataselect.html
@@ -1,8 +1,9 @@
 <div class="data-select">
-    <button class="data-select__btn datapicker-trigger-js" type="button">Дата</button>
-    <div class="data-select__result">
-        <input type="text" readonly class="date-select__input datapicker-result-js">
-        <button class="data-select__clear datapicker-clear-js"></button>
+    <button class="data-select__btn btn datapicker-trigger-js" type="button">Дата</button>
+    <div class="data-select__result ">
+        <input type="text" hidden readonly class="date-select__input datapicker-result-js">
+        <div class="data-select__fake-input datapicker-fake-js"></div>
+        <button type="button" class="data-select__clear btn datapicker-clear-js"></button>
     </div>
     <div class="data-select__dropdown">
         <div class="data-select__item datapicker-js"></div>
